<resources>
    <string name="app_name">MA4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_welcome">Welcome1</string>

    <string name="Find_Class">Find Class</string>
    <string name="Add_Drop">Add/Drop</string>
    <string name="Schedule">Schedule</string>
    <string name="Settings">Settings</string>

    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="save">save</string>

    <string name="map">Map</string>
    <string name="information">Information</string>

    <string name="skillA_prompt">Select your skill</string>

    <string-array name="skillA_array">
        <item>Exercise</item>
        <item>Cooking</item>
        <item>Computer</item>
        <item>Arts</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_maps">Maps</string>
</resources>
